# vault-k8s-operator

./: .gitignore  .readthedocs.yaml  .rsync-filter  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  grafana.lint  index.html  justfile  kv-requirements.in  kv-requirements.txt  metadata.yaml  pyproject.toml  requirements.in  requirements.txt  test-requirements.in  test-requirements.txt  tox.ini
k8s/: CONTRIBUTING.md  Makefile  charmcraft.yaml  coverage.xml  pyproject.toml  tox.ini
k8s/.vendored/vault-package/: pyproject.toml
k8s/.vendored/vault-package/src/vault/: vault_helpers.py
k8s/.vendored/vault-package/tests/unit/: config_with_raft_peers.hcl  config_with_raft_peers_equivalent.hcl  kv_with_mount.hcl  test_vault_client.py
k8s/.vendored/vault-package/vault/: charm.py  juju_facade.py  security_logger.py  vault_client.py  vault_managers.py  vault_s3.py
k8s/.vendored/vault-package/vault/testing/: __init__.py  mocks.py
k8s/lib/charms/certificate_transfer_interface/v0/: certificate_transfer.py
k8s/lib/charms/tls_certificates_interface/v4/: tls_certificates.py
k8s/lib/charms/vault_k8s/v0/: vault_kv.py  vault_managers.py
k8s/lib/vault/: juju_facade.py  vault_client.py  vault_helpers.py  vault_managers.py  vault_s3.py
k8s/src/: charm.py  container.py
k8s/src/grafana_dashboards/: vault.json
k8s/src/prometheus_alert_rules/: failure_tolerance.rules  leadership_setup_failure.rule
k8s/src/templates/: vault.hcl.j2
k8s/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
k8s/tests/integration/: config.py  conftest.py  helpers.py  test_acme.py  test_autounseal.py  test_backup.py  test_core.py  test_cos.py  test_deploy_unseal.py  test_integration.py  test_kv.py  test_pki.py  test_pki_self_signed.py  test_upgrade_charm.py  test_upgrade_first.py  test_upgrade_latest.py  vault.py  vault_helpers.py
k8s/tests/integration/charm_states/: self_signed_certificates.py  vault.py  vault_kv_requirer.py
k8s/tests/integration/vault_kv_requirer_operator/: charmcraft.yaml  pyproject.toml
k8s/tests/integration/vault_kv_requirer_operator/src/: charm.py  vault_client.py
k8s/tests/unit/: certificates.py  config.hcl  example_regression_tests.py  fixtures.py  test_charm_authorize_action.py  test_charm_collect_status.py  test_charm_config.py  test_charm_configure.py  test_charm_create_backup_action.py  test_charm_install.py  test_charm_integrations.py  test_charm_list_backups_action.py  test_charm_remove.py  test_charm_restore_backup_action.py  test_vault_tls.py
k8s/tests/unit/lib/: certificate_helpers.py  certificates_helpers.py  config_with_transit_stanza.hcl  test_juju_facade.py  test_vault_autounseal.py  test_vault_client.py  test_vault_helpers.py  test_vault_managers.py  test_vault_s3.py  test_vault_tls.py
machine/: CONTRIBUTING.md  Makefile  charmcraft.yaml  coverage.xml  pyproject.toml  tox.ini
machine/.vendored/: README.md
machine/.vendored/vault-package/: pyproject.toml
machine/.vendored/vault-package/src/vault/: vault_managers.py
machine/.vendored/vault-package/tests/unit/: config.hcl
machine/.vendored/vault-package/vault/: juju_facade.py  security_logger.py  vault_client.py  vault_managers.py
machine/.vendored/vault-package/vault/testing/: charm_authorize_action.py  mocks.py
machine/lib/: vault_autounseal.py  vault_helpers.py  vault_managers.py
machine/lib/charms/certificate_transfer_interface/v0/: certificate_transfer.py
machine/lib/charms/certificate_transfer_interface/v1/: certificate_transfer.py
machine/lib/charms/grafana_agent/v0/: cos_agent.py
machine/lib/charms/tls_certificates_interface/v4/: tls_certificates.py
machine/lib/charms/traefik_k8s/v2/: ingress.py
machine/lib/vault/: __init__.py  juju_facade.py  vault_autounseal.py  vault_client.py  vault_helpers.py  vault_managers.py  vault_s3.py
machine/src/: charm.py  machine.py  systemd_creds.py
machine/src/grafana_dashboards/: vault.json
machine/src/prometheus_alert_rules/: failure_tolerance.rule  leader_last_contact.rule  vault_sealed.rule
machine/src/templates/: charm_policy.hcl  systemd_dropin.conf.j2  systemd_dropin_creds.conf.j2  systemd_dropin_env.conf.j2  vault.hcl.j2  vault_load_systemd_creds.env.j2
machine/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
machine/tests/integration/: config.py  conftest.py  constants.py  helpers.py  test_acme.py  test_autounseal.py  test_backup.py  test_backup_microceph.py  test_core.py  test_cos_integration.py  test_deploy_unseal.py  test_ingress.py  test_integration.py  test_kv.py  test_pki.py  test_pki_self_signed.py  test_upgrade_charm.py  test_upgrade_first.py  test_upgrade_latest.py  vault.py  vault_helpers.py
machine/tests/integration/charm_states/: grafana.py  ha_proxy.py  s3_integrator.py  self_signed_certificates.py  vault.py  vault_kv_requirer.py  vault_pki_requirer.py
machine/tests/integration/vault_kv_requirer_operator/: charmcraft.yaml  pyproject.toml  requirements.in  requirements.txt
machine/tests/unit/: certificates.py  config.hcl  config_with_raft_peers.hcl  config_with_raft_peers_equivalent.hcl  conftest.py  fixtures.py  test_charm_authorize_action.py  test_charm_bootstrap_raft_action.py  test_charm_collect_status.py  test_charm_config.py  test_charm_configure.py  test_charm_create_backup_action.py  test_charm_integrations.py  test_charm_list_backups_action.py  test_charm_logrotate.py  test_charm_remove.py  test_charm_restore_backup_action.py  test_config_file_content_matches.py
vault-package/: CONTRIBUTING.md  pyproject.toml  tox.ini
vault-package/lib/: charms
vault-package/src/vault/: vault_autounseal.py
vault-package/tests/unit/: test_juju_facade.py  test_vault_autounseal.py  test_vault_client.py  test_vault_helpers.py  test_vault_s3.py
vault-package/vault/: juju_facade.py  systemd_creds.py  vault_autounseal.py  vault_client.py  vault_helpers.py  vault_managers.py  vault_s3.py
vault-package/vault/_vendored/: charmcraft.yaml
vault-package/vault/testing/: charm_authorize_action.py  mocks.py
(+61170 files in other folders)
