[project]
name = "vault-k8s-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops>=3.3.1",
    "vault-package",
    # via certificate_transfer, ingress, tls_certificates, tracing and vault_kv
    "pydantic==2.12.2",
    # via charm_tracing
    "opentelemetry-exporter-otlp-proto-http",
    # via ingress_per_unit
    "jsonschema",
    # via grafana_dashboard
    "jinja2",
    # via grafana_dashboard, loki_push_api and prometheus_scrape
    "cosl>0.0.50",
    # via tls_certificates
    "cryptography",
    # via vault_kv
    "pytest-interface-tester",
    "lightkube",
    "lightkube-models",
]

[dependency-groups]
test = [
    "allure-pytest",
    "coverage[toml]",
    "hvac",
    "juju",
    "lightkube",
    "lightkube-models",
    "ops[testing]",
    "pyhcl",  # import hcl
    "pytest",
    "pytest-operator",
    "requests",
]
dev = ["codespell", "pyright", "ruff", "types-hvac"]

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit", "tests/integration"]  # correctly sort local imports in tests
extend-exclude = [
    # vendored local Python packages
    ".vendored/",
    # libs used by (and not defined by) this charm
    "lib/charms/certificate_transfer_interface/",
    "lib/charms/data_platform_libs/",
    "lib/charms/grafana_k8s/",
    "lib/charms/loki_k8s/",
    "lib/charms/prometheus_k8s/",
    "lib/charms/tempo_coordinator_k8s/",
    "lib/charms/tls_certificates_interface/",
    "lib/charms/traefik_k8s/",
    "lib/charms/observability_libs"
]

[tool.pyright]
extends = "../pyproject.toml"
include = ["src/", "lib/", "tests/"]
ignore = [
    # libs used by (and not defined by) this charm
    "lib/charms/certificate_transfer_interface/",
    "lib/charms/data_platform_libs/",
    "lib/charms/grafana_k8s/",
    "lib/charms/loki_k8s/",
    "lib/charms/prometheus_k8s/",
    "lib/charms/tempo_coordinator_k8s/",
    "lib/charms/tls_certificates_interface/",
    "lib/charms/traefik_k8s/",
    "lib/charms/observability_libs"
]

[tool.uv.sources]
vault-package = { path = ".vendored/vault-package", editable = true }
