[project]
name = "vault-k8s-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops>=3.7.0",
    "vault-package",
    "charmlibs-interfaces-tls-certificates~=1.8",
    "charmlibs-interfaces-certificate_transfer",
    # via certificate_transfer, ingress, tls_certificates, tracing and vault_kv
    "pydantic==2.13.0",
    # via charm_tracing
    "opentelemetry-exporter-otlp-proto-http",
    # via ingress_per_unit
    "jsonschema",
    # via grafana_dashboard
    "jinja2",
    # via grafana_dashboard, loki_push_api and prometheus_scrape
    "cosl>0.0.50",
    # via tls_certificates
    "cryptography",
    # via vault_kv
    "pytest-interface-tester",
    "lightkube",
    "lightkube-models",
    # Defense-in-depth: cffi 2.0.0 may also have calling-convention issues on s390x.
    "cffi<2; platform_machine == 's390x'",
    # cryptography >= 44 builds from source on s390x (no wheel) using Rust+aws-lc-rs;
    # version 43.x uses cffi wrapping system OpenSSL and is confirmed to work.
    "cryptography<49; platform_machine == 's390x'",
    # protobuf >= 4.21 uses the upb C extension which crashes on s390x (unaligned
    # memory access in upb_strtable_lookup2) both at import time and during interpreter
    # shutdown. Version 4.20.x uses the older implementation that works correctly.
    "protobuf<4.21; platform_machine == 's390x'",
    # pynacl >= 1.6 requires libsodium >= 1.0.20 (AEGIS support) but Ubuntu Noble
    # ships 1.0.18; pin to 1.5.x which works with system libsodium.
    "pynacl<1.7; platform_machine == 's390x'",
]

[dependency-groups]
test = [
    "allure-pytest",
    "coverage[toml]",
    "hvac",
    "jubilant",
    "lightkube",
    "lightkube-models",
    "ops[testing]",
    "pyhcl",  # import hcl
    "pytest",
    "pytest-jubilant",
    "requests",
]
dev = ["codespell", "pyright", "ruff", "types-hvac"]

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit", "tests/integration"]  # correctly sort local imports in tests
extend-exclude = [
    # vendored local Python packages
    ".vendored/",
    # libs used by (and not defined by) this charm
    "lib/charms/certificate_transfer_interface/",
    "lib/charms/data_platform_libs/",
    "lib/charms/grafana_k8s/",
    "lib/charms/loki_k8s/",
    "lib/charms/prometheus_k8s/",
    "lib/charms/tempo_coordinator_k8s/",
    "lib/charms/traefik_k8s/",
    "lib/charms/observability_libs"
]

[tool.pyright]
extends = "../pyproject.toml"
include = ["src/", "lib/", "tests/"]
ignore = [
    # libs used by (and not defined by) this charm
    "lib/charms/certificate_transfer_interface/",
    "lib/charms/data_platform_libs/",
    "lib/charms/grafana_k8s/",
    "lib/charms/loki_k8s/",
    "lib/charms/prometheus_k8s/",
    "lib/charms/tempo_coordinator_k8s/",
    "lib/charms/traefik_k8s/",
    "lib/charms/observability_libs"
]

[tool.uv]
# Fork resolution per platform to enforce the cffi<2 defense on s390x.
environments = [
    "platform_machine == 's390x'",
    "platform_machine != 's390x'",
]

[tool.uv.sources]
vault-package = { path = ".vendored/vault-package", editable = true }
