[project]
name = "vault-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "jinja2",
    "ops",
    "psutil",
    "vault-package",
    "charmlibs-interfaces-tls-certificates~=1.3",
    # via cos_agent
    "cosl",
    # via cos_agent and tls_certificates
    "cryptography",
    # via vault_kv
    "pytest-interface-tester",
]

[dependency-groups]
test = [
    "coverage[toml]",
    "hvac",
    "juju",
    "pyhcl",             # import hcl
    "pytest",
    "pytest-dependency",
    "pytest-operator",
]
dev = ["codespell", "pyright", "ruff"]

[tool.ruff]
extend = "../pyproject.toml"
src = [
    "src",
    "tests/unit",
    "tests/unit/lib",
    "tests/integration",
] # correctly sort local imports in tests
extend-exclude = [
    # vendored local Python packages
    ".vendored/",
    # libs used by (and not defined by) this charm
    "lib/charms/certificate_transfer_interface/",
    "lib/charms/data_platform_libs/",
    "lib/charms/grafana_agent/",
    "lib/charms/operator_libs_linux/",
    "lib/charms/traefik_k8s/",
    "lib/charms/vault_k8s/",
]

[tool.pyright]
extends = "../pyproject.toml"
include = ["src/", "lib/", "tests/"]
ignore = [
    # libs used by (and not defined by) this charm
    "lib/charms/certificate_transfer_interface/",
    "lib/charms/data_platform_libs/",
    "lib/charms/grafana_agent/",
    "lib/charms/operator_libs_linux/",
    "lib/charms/traefik_k8s/",
    "lib/charms/vault_k8s/",
]

[tool.uv.sources]
vault-package = { path = ".vendored/vault-package", editable = true }
