[project]
name = "vault-package"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "boto3",
    "boto3-stubs[s3]",
    "hvac",
    "jinja2",
    "ops",
    "pyhcl",  # import hcl
    "requests",
    "pydantic",
    "pytest-interface-tester",  # import interface_tester
    # via tls_certificates
    "cryptography",
]

[dependency-groups]
test = ["coverage[toml]", "pytest"]
dev = ["codespell", "pyright", "ruff"]

[build-system]
requires = ["uv_build>=0.9.14,<0.9.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "vault"
module-root = ""

[tool.ruff]
extend = "../pyproject.toml"
extend-exclude = ["lib/charms/"]

[tool.pyright]
extends = "../pyproject.toml"
ignore = ["lib/charms/"]
