[project]
name = "vault"
version = "0"
requires-python = ">=3.10"

dependencies = [
    "allure-pytest",
    "boto3",
    "boto3-stubs[s3]",
    "cosl>0.0.50",
    "cryptography",
    "hvac",
    "jinja2",
    "jsonschema",
    "lightkube",
    "lightkube-models",
    "ops>=0.23.0",
    "opentelemetry-exporter-otlp-proto-http",
    "pydantic==2.10.6",
    "pytest-interface-tester",
    "pyhcl",
    "requests",
    "rpds-py==0.23.1",
]

[dependency-groups]
test = [
    "coverage[toml]",
    "juju",
    "ops[testing]",
    "pytest",
    "pytest-operator",
    "pytest-asyncio==0.21.2",
]
dev = ["codespell", "pyright", "ruff", "types-hvac"]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
extend = "../pyproject.toml"

[tool.pyright]
extends = "../pyproject.toml"
include = ["vault"]
